1.19/part2.mdx
import Code from '../home/demos/code'
import {InternalLink} from './text/link';

##  数据模型定义

### datamodel定义概述

datamodel有两个主要功能:

- **定义底层数据库模式和表**(在无模式数据库（如MongoDB）的情况下，它们映射到数据库表或等效结构，如_documents_)。
- 它是Prisma API的**自动生成的CRUD和实时操作代码**的基础。 [了解更多](#datamodel-vs-prisma-graphql-schema)。


数据模型使用GraphQL的 [schema定义语言SDL](https://www.prisma.io/blog/graphql-sdl-schema-definition-language-6755bcb9ce51/)(SDL)编写，并存储在一个或多个`.graphql`后缀的文件中。这些`.graphql`文件需要在`prisma.yml`的`datamodel`属性中引用。例如:

<Code lang="yaml">{`
endpoint: __YOUR_PRISMA_ENDPOINT__
datamodel: datamodel.prisma
`}</Code> 

#### 构建数据模型的块

有几个可用的构建块来塑造你的数据模型。

- [Types](#对象类型)由多个[fields字段](#字段)组成，通常表示应用程序中的实体(例如`User`，`Car`，`Order`)。数据模型中的每种类型都映射到数据库表(或无模式数据库的等效结构)，并且将CRUD操作添加到GraphQL schema中。
- [Relations](#relations)描述类型之间的_relationship关系_。
- [Directives](#graphql指令)指令涵盖不同的用例，例如类型约束或级联删除行为。
- [Interfaces](http://graphql.org/learn/schema/#interfaces)是抽象类型，包括一组字段，类型必须包含在_implement_接口中。接口目前不适用于Prisma中的数据建模，但将来会支持[待实现功能](https://github.com/prisma/prisma/issues/83)。

#### 为什么选择SDL？

SDL用于数据建模的主要原因有两个:

- SDL是一种 **直观，简洁，简洁的表达类型定义的方式，因此有助于提供良好的开发人员体验**。
- 使用GraphQL SDL定义用作GraphQL API基础的模型是一种 **惯用的**方法。

没有严格的技术要求必须使用SDL，在未来Prisma可能允许其他方法提供模型定义。

> 要了解有关SDL的更多信息，你可以查看官方[GraphQL文档](http://graphql.org/learn/schema/#type-language)或阅读实际[规范](http://facebook.github.io/graphql/draft/#sec-Type-System)。

### datamodel例子

一个简单的`datamodel.prisma`文件例子:

<Code lang="graphql">{`
type Tweet {
  id: ID! @unique
  createdAt: DateTime!
  text: String!
  owner: User!
  location: Location!
}
type User {
  id: ID! @unique
  createdAt: DateTime!
  updatedAt: DateTime!
  handle: String! @unique
  name: String
  tweets: [Tweet!]!
}
type Location {
  latitude: Float!
  longitude: Float!
}
`}</Code>

此示例说明了使用数据模型时的一些重要概念:

- 三种类型`Tweet`，`User`和`Location`被映射到数据库表(或无模式数据库的等效结构)。
- "User"和"Tweet"之间存在_双向_关系(通过`owner`和`tweets`字段)。
- 从`Tweet`到`Location`(通过`location`字段)有一个_单向_关系。
- 除了`User`上的`name`字段外，所有字段在数据模型中都是_必填字段_(由类型后面的`!`表示)。
- `id`，`createdAt`和`updatedAt`字段由Prisma管理，在暴露的Prisma API中是_只读的_(意味着它们不能通过Mutation改变)。
- `@unique`指令表示_唯一约束_，这意味着Prisma会自动确保永远不会有两条数据具有相同的值，比如说id或手机号不会相同从而造成重复注册。

创建和更新数据模型就像编写和保存datamodel文件一样简单。一旦对数据模型感到满意，就可以通过运行`prisma deploy`来保存文件并将更改应用到Prisma service:

<Code>{`
$ prisma deploy
# 以下是终端输出
Changes:
  Tweet (Type)
  + Created type \`Tweet\`
  + Created field \`id\` of type \`GraphQLID!\`
  + Created field \`createdAt\` of type \`DateTime!\`
  + Created field \`text\` of type \`String!\`
  + Created field \`owner\` of type \`Relation!\`
  + Created field \`location\` of type \`Relation!\`
  + Created field \`updatedAt\` of type \`DateTime!\`
  User (Type)
  + Created type \`User\`
  + Created field \`id\` of type \`GraphQLID!\`
  + Created field \`createdAt\` of type \`DateTime!\`
  + Created field \`updatedAt\` of type \`DateTime!\`
  + Created field \`handle\` of type \`String!\`
  + Created field \`name\` of type \`String\`
  + Created field \`tweets\` of type \`[Relation!]!\`
  Location (Type)
  + Created type \`Location\`
  + Created field \`latitude\` of type \`Float!\`
  + Created field \`longitude\` of type \`Float!\`
  + Created field \`id\` of type \`GraphQLID!\`
  + Created field \`updatedAt\` of type \`DateTime!\`
  + Created field \`createdAt\` of type \`DateTime!\`
  TweetToUser (Relation)
  + Created relation between Tweet and User
  LocationToTweet (Relation)
  + Created relation between Location and Tweet
Applying changes... (22/22)
Applying changes... 0.4s
`}</Code>

###  Datamodel vs Prisma GraphQL schema

当使用GraphQL和Prisma时，你正在使用的`.graphql`后缀的文件的作用可能会令人困惑。所以，了解每一个的功能至关重要。

我们看在Prisma项目中，有三个相关的`.graphql`后缀的文件:

- **datamodel**包含服务API的_数据模型定义_，通常称为`datamodel.prisma`。
- **Prisma GraphQL schema**定义服务API（也就是前端能操作和请求）的实际CRUD和实时操作（realtime _operations_），通常称为`prisma.graphql`。
- **应用程序schema**定义通过http请求能够执行什么样的操作，不像上面的`prisma.graphql`包含所有操作，应用程序schema只需要写你能用到的，或去掉危险操作比如删除所有用户这种。所有在这里定义的Query、Mutation和Subscription都要一一对应写resolvers来决定返回的数据。通常为`schema.graphql`或`app.graphql`.

Prisma数据库的表基于datamodel生成:

![](https://i.imgur.com/jHkNjKU.png)

该图展示了生成的Prisma GraphQL schema的简化版本，你可以找到完整的schema[此处](https://gist.github.com/gc-codesnippets/f302c104f2806f9e13f41d909e07d82d)。

[GraphQL schema](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e/)定义了GraphQL API的操作。它实际上是用SDL编写的_types_集合(SDL还支持接口，枚举，联合类型等原语，你可以学习有关GraphQL类型系统的所有内容[这里](http://graphql.org/learn/schema/#type-system))。

GraphQL schema有三个特殊的_根类型：root types_:`Query`，`Mutation`和`Subscription`。这些类型定义API的_入口点（类似路由的url）：entry points_定义API将接受的操作。要了解有关GraphQL schema的更多信息，请查看此[文章](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e/)。


#### 数据模型

数据模型由Prisma service的开发者手动编写。它定义了开发人员想要在其API和数据库中使用的模型和结构。

严格来说，**datamodel不是有效的GraphQL schema**，因为它不包含任何GraphQL的根类型(`Query`，`Mutation`，`Subscription`)，因此不定义任何API操作。

数据模型仅是生成Prisma GraphQL API的实际GraphQL schema的_基础_。

#### Prisma GraphQL schema

可以使用[GraphQL CLI](https://github.com/graphql-cli/graphql-cli)的`get-schema`命令或通过[内省查询](https://graphql.org/learn/introspection/)从Prisma service下载直接针对服务API的Prisma GraphQL schema。

##### 通过service的endpoint下载Prisma GraphQL schema

假设`http://localhost:4466/myservice/dev`是你服务的端点，你需要运行以下命令，以便下载Prisma GraphQL schema并将其存储在名为`prisma.graphql`的文件中:

<Code>{`
graphql get-schema --endpoint http://localhost:4466/myservice/dev --output prisma.graphql --no-all
`}</Code>

但是生成prisma.graphql文件一般是使用下面的方式自动化配置，无需手动下载

##### 使用graphql-config和post-deployment hook生成Prisma GraphQL schema

在实际开发设置中，你希望保持本地Prisma GraphQL schema与服务的API同步，并确保在每次部署Prisma service时更新它。你可以使用_post-deployment_ 来实现。

`.graphqlconfig.yml`和prisma.yml在设置好的样子:

**`prisma.yml`**

<Code lang="yaml">{`
datamodel: datamodel.prisma
endpoint: http://localhost:4466/myservice/dev
secret: mysecret
hooks:
  post-deploy:
    - graphql get-schema --project db
`}</Code>

**`.graphqlconfig.yml`**

<Code lang="yaml">{`
project:
  db:
    schemaPath: /generated/prisma.graphql
    extensions:
      prisma: prisma.yml
`}</Code>

现在，在终端执行`prisma deploy`之后，Prisma CLI调用`post-deploy`钩子并运行指定的`graphql get-schema --project db`命令。这将在`.graphqlconfig.yml`(它是Prisma service的API配置)中查找`db`项目，下载其schema并将其存储在`prisma.graphql`中(在`.graphqlconfig`中指定的`schemaPath`的位置)。

#### 应用程序schema

如果你已经考虑过基于Prisma构建自己的GraphQL服务器，你可能会遇到另一个`.graphql`文件，它被称为你的**应用程序schema**(通常为`schema.graphql`或`app.graphql`)。

这是一个有效的GraphQL schema(意味着它包含`Query`，`Mutation`和`Subscription`根类型)，它定义了_应用程序层_的API。与Prisma的_通用CRUD API相比，应用程序层的API应该公开针对前端端应用程序需求而定制的特定的操作。

应用程序层使用Prisma作为_data访问层_并将传入的请求委托给服务端的Prisma API，它们实际上是针对数据库解析的。

你通常不会在应用程序schema中重新定义模型定义。相反，你使用[`graphql-import`](https://github.com/prismagraphql/graphql-import)_import_他们:

`schema.graphql`中如下，在这里`#`符号不是注释，而是特定导入语法。

<Code lang="graphql">{`
# import Post from "prisma.graphql"
type Query {
  feed: [Post!]!
}
`}</Code>

`graphql-import`目前使用SDL注释来导入类型。 将来，SDL可能会有一个正式的导入语法[已经讨论过](https://github.com/graphql/graphql-wg/blob/master/notes/2018-02-01.md#present)。

阅读 **深入理解Prisma**了解有关应用程序schema的更多信息。

### 文件

你可以将你的数据模型编写在一个`.graphql`文件中，或者将其分成多个。

包含datamodel的`.graphql`文件需要在prisma.yml下的属性`datamodel`中指定。 例如:

<Code lang="yaml">{`
datamodel:
  - types.graphql
  - enums.graphql
`}</Code>

如果只有一个文件定义了数据模型，则可以按如下方式指定:

<Code lang="yaml">{`
datamodel: datamodel.prisma
`}</Code>

### 对象类型type

_object type_(简称 _type_)定义数据模型中一个_model_的结构。 它用于表示_应用领域_中的_实体_。

每个对象类型都映射到数据库。 对于关系数据库，每种类型创建一个_table_。 对于无模式数据库，使用等效结构(例如_document_)。 请注意，即使对于无模式数据库，Prisma也会强制执行模式!

![](https://i.imgur.com/NFLy3AO.png)

类型具有_name_和一个或多个[_fields字段_](#字段)。 类型名称只能包含 **字母、数字、字符**，需要以大写字母开头。 它们可以包含 **最多64个字符**。

类型的实例化称为_node_。 该术语指的是_data graph_中的节点。

你在数据模型中定义的每种类型都将在生成的_Prisma GraphQL schema_中作为类似类型提供。

#### 定义对象类型

在datamodel中使用关键字"type"定义对象类型:

<Code lang="graphql">{`
type Article {
  id: ID! @unique
  title: String!
  text: String
  isPublished: Boolean! @default(value: "false")
}
`}</Code>

上面定义的类型具有以下属性:

- Name: `Article`
- Fields: `id`, `title`, `text` , `isPublished` (默认为 `false`)

`id` , `title` , `isPublished` 是必填字段 (被后面的 `!` 符号定义), `text` 可选填.

所有`ID` 都必须是`@unique`。

#### 生成type的API操作

数据模型中的类型会影响Prisma API中的可用操作。以下是Prisma API中每种类型生成的CRUD和实时操作的概述:

- Query允许你获取该类型的一个或多个节点
- Mutations允许你创建，更新或删除该类型的节点
- Subscriptions可以让你收到有关该类型节点更改的实时通知(即新节点是_created_或现有节点是_updated_或_deleted_)

### 字段

_Fields_是[type]的构建块，为节点提供_shape_。每个字段都由其名称引用，并且是[标量](#标量)或[关系](#关系)字段。

字段名称只能包含 **字母数字字符**，需要以小写字母开头。它们可以包含 **最多64个字符**。

通俗来说就是数据库表的列column。

#### 标量字段

#####  String

`String`保存文本。用于用户名的类型，博客文章的内容或能表示为文本的任何其他内容。

在Demo服务器上，字符串值当前限制为256KB。使用[cluster配置](https://github.com/graphcool/framework/issues/748)可以在其他cluster上增加此限制。

这是一个`String`标量定义的例子:

<Code lang="graphql">{`
type User {
  name: String
}
`}</Code>

当在操作中用作参数时，必须使用用双引号括起来指定`String`字段:

<Code lang="graphql">{`
query {
  user(name: "Sarah") {
    id
  }
}
`}</Code>

##### 整数

一个`Int`是一个整数，不能有小数。 使用此选项可存储值，例如年龄。

`Int`值的范围是-2147483648到2147483647。

这是一个`Int`标量定义的例子:

<Code lang="graphql">{`
type User {
  age: Int
}
`}</Code>

当在操作中用作参数时，写`Int`字段不能包含任何封闭字符:

<Code lang="graphql">{`
query {
  user(age: 42) {
    id
  }
}
`}</Code>

#####  Float

`Float`是一个可以有小数的数字。 使用此选项可存储值，例如商品的价格或复杂计算的结果。

在查询或Mutation中，写`Float`字段，不带任何封闭字符，小数点为可选:`float:42`，`float:4.2`。

以下是"Float"标量定义的示例:


<Code lang="graphql">{`
type Item {
  price: Float
}
`}</Code>

当在操作中用作参数时，写`Float`字段，不带任何封闭字符，小数点可选:

<Code lang="graphql">{`
query {
  item(priceLargerThan: 42.2) {
    id
  }
}
`}</Code>

#####  Boolean

一个`Boolean`的值可以是`true`或`FALSE`。 在判断场景比较常见，例如用户是否想要接收电子邮件或者用户是否是会员。

以下是`Boolean`标量定义的示例:

<Code lang="graphql">{`
type User {
  overEighteen: Boolean
}
`}</Code>

同样不能有封闭字符

<Code lang="graphql">{`
query {
  user(overEighteen: true) {
    id
  }
}
`}</Code>

#####  DateTime

`DateTime`类型可用于存储日期和/或时间值。可能是一个人的出生日期或特定事件发生时的时间/数据。

这是一个`DateTime`标量定义的例子:

<Code lang="graphql">{`
type User {
  birthday: DateTime
}
`}</Code>

当在操作中用作参数时，必须在[ISO 8601格式](https://en.wikipedia.org/wiki/ISO_8601)中指定`DateTime`字段，并带有双引号:

<Code lang="graphql">{`
query {
  user(birthday: "2015-11-22"){
    id
  }
}
`}</Code>

ISO 8601还接受以下格式:

- `datetime:"2015"`
- `datetime:"2015-11"`
- `datetime:"2015-11-22"`
- `datetime:"2015-11-22T13:57:31.123Z"`。

#####  Enum

像"Boolean"一样，枚举可以有一组预定义的值。 区别在于_你_可以定义可能的值(而对于`Boolean`，选项被限制为`true`和`false`)。 例如，你可以通过创建具有可能值"COMPACT"，"WIDE"和"COVER"的枚举来指定文章的格式。

枚举值只能包含 **字母数字字符和下划线**，并且需要以大写字母开头。 枚举值的名称可用于查询过滤器和Mutation。 它们可以包含 **最多191个字符**。

以下是枚举定义datamodel的示例:

<Code lang="graphql">{`
enum ArticleFormat {
  COMPACT,
  WIDE,
  COVER
}
type Article {
  format: ArticleFormat
}
`}</Code>

当在操作中用作参数时，必须在不包含双引号的情况下指定枚举字段:

<Code lang="graphql">{`
query {
  article(format: COMPACT) {
    id
  }
}
`}</Code>

#####  Json

有时你可能需要为松散结构化的数据存储任意JSON值。 `Json`类型确保它实际上是有效的JSON并将值作为解析的JSON对象/数组而不是字符串返回。

Json值目前限制为256KB。

这是一个`Json`定义的例子:

<Code lang="graphql">{`
type Item {
  data: Json
}
`}</Code>

当在操作中用作参数时，必须使用双引号括起来指定的`Json`字段。 特殊字符必须被转义: `json: "{\"int\": 1, \"string\": \"value\"}"`.

<Code lang="graphql">{`
mutation {
  createItem(data: "{\"int\": 1, \"string\": \"value\"}") {
    data
  }
}
`}</Code>

#####  ID

"ID"值是基于[cuid](https://github.com/prismagraphql/cuid-java)生成的唯一25个字符的字符串。 具有"ID"值的字段是[系统字段](#系统字段)并且仅在内部使用，因此无法使用"ID"类型创建新字段。

`ID`字段只能在一个类型上使用一次，并且必须使用`@unique`指令进行注释:

####  类型修饰符

在字段定义中，可以使用_类型修饰符_注释类型。 GraphQL支持两种类型修改:

- 必填字段:使用`!`注释类型，例如 `name:String!`
- List:使用一对封闭的`[]`来注释类型，例如: `friends: [User]`

#####  List

一般在一对多关系中使用List。

可以使用列表字段类型标记标量字段。 具有多重性的关系字段也将被标记为列表。

经常会发现列表定义与此类似:

<Code lang="graphql">{`
type Article {
  tags: [String!]!
}
`}</Code>

注意两个`!`类型修饰符，这是它们表达的内容:

- 第一个`!`类型修饰符(在`String`之后)意味着列表中的任何项都不能为"null"，例如 `tags`的这个值无效:`["Software"，null，"GraphQL"]`
- 第二个`!`类型修饰符(在结束方括号之后)意味着列表本身永远不能为"null"，但它可能是_empty_。 因此，`null`不是`tags`字段的有效值，而`[]`是。

**记住，所有一对多关系，必须有两个`!`，不然prisma deploy时会报错，因为返回值不能为null，用！后返回值哪怕为空也是`[]`**

#####  必填

字段可以标记为必需(有时也称为"非空")。 创建新节点时，需要为所需的字段提供值，并且没有[默认值](#默认值)。

在字段类型后面使用`!`标记必填字段:

<Code lang="graphql">{`
type User {
  name: String!
}
`}</Code>

#### 字段限制

可以使用字段约束配置字段以添加进一步的语义并在数据模型中强制执行某些规则。

##### 唯一

设置_unique_约束可确保所讨论类型的两个节点对于某个字段不能具有相同的值。 唯一的例外是`null`值，这意味着多个节点可以具有值`null`而不违反约束。 唯一字段在底层数据库中应用了唯一的_索引_。

一个典型的例子是`User`类型的`email`字段，其中假设每个`User`应该具有全球唯一的电子邮件地址。

只有String字段中的前191个字符被认为是唯一性，唯一的检查是_不区分大小写的_。 如果前191个字符相同或者它们仅在大小写上不同，则无法存储两个不同的字符串。

要将字段标记为唯一，只需将`@unique`指令附加到其定义:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  email: String! @unique
  name: String!
}
`}</Code>

对于使用`@unique`注释的每个字段，你都可以通过为该字段提供值作为查询参数来查询相应的数据。

例如，考虑到上面的数据模型，你现在可以通过其`email`地址检索特定的`User`节点:

<Code lang="graphql">{`
query {
  user(where: {
    email: "kwc@1wire.com"
  }) {
    name
  }
}
`}</Code>

##### 更多限制

将很快添加更多数据库约束。 如果你希望在Prisma中看到某些约束，请加入此[功能请求](https://github.com/prisma/prisma/issues/728)中的讨论。

#### 默认值

你可以为非列表标量字段设置_default值_。 当在`create`-mutation期间没有提供任何值时，该值将应用于新创建的节点。

要指定字段的默认值，可以使用`@default`指令:

<Code lang="graphql">{`
type Story {
  isPublished: Boolean @default(value: "false")
  someNumber: Int! @default(value: "42")
  title: String! @default(value: "My New Post")
  publishDate: DateTime! @default(value: "2018-01-26")
}
`}</Code>

请注意，你需要始终将值括在双引号中，即使对于非字符串类型(例如`Boolean`或`Int`)也是如此。

#### 系统字段

三个字段`id`，`createdAt`和`updatedAt`在Prisma中有特殊的语义。它们在你的数据模型中是可选的，但始终在基础数据库中存在。这样，你可以随时将字段添加到数据模型中，并且数据仍可用于现有节点。

这些字段的值当前在Prisma API中是只读的(导入数据时除外)，但将来可以配置。有关详细信息，请参阅[此提案](https://github.com/prisma/prisma/issues/1278)。

请注意，你不能拥有名为`id`，`createdAt`和`updatedAt`的自定义字段，因为这些字段名称是为系统字段保留的。以下是这三个字段唯一支持的声明:

- `id:ID! @unique`
- `createdAt:DateTime!`
- `updatedAt:DateTime!`

所有系统字段都需要标记为[必填](#必填)，并且`id`字段还需要使用`@unique`指令进行注释。

##### 系统字段:`id`

节点在创建时将自动分配一个全局唯一标识符，该标识符存储在`id`字段中。

每当你将`id`字段添加到类型定义中以在GraphQL API中公开它时，你必须使用`@unique`指令对其进行注释。

`id`具有以下属性:

*由25个字母数字字符组成(字母总是小写)
*始终以(小写)字母开头，例如`c`
*遵循[cuid](https://github.com/ericelliott/cuid)(_collision resistant unique identifiers_)方案

请注意，Prisma GraphQL schema中的所有模型类型都将生成`Node`接口。这就是`Node`接口的样子:

<Code lang="graphql">{`
interface Node {
  id: ID! @unique
}
`}</Code>

##### 系统字段:`createdAt`和`updatedAt`

数据模型还提供了两个可以添加到类型中的特殊字段:

- `createdAt:DateTime!`:存储此对象类型的节点为_created_的确切日期和时间。
- `updatedAt:DateTime!`:存储此对象类型的节点_last updated_的确切日期和时间。

如果希望类型公开这些字段，只需将它们添加到类型定义中，例如:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  createdAt: DateTime!
  updatedAt: DateTime!
}
`}</Code>

不要忘记加`!`

#### 生成字段的API操作

数据模型中的字段会影响可用的查询参数。

#### 更改多个标量字段的值

你可以使用`updateManyXXX`Mutation来更改所有节点的标量字段值，或仅更改特定子集。

<Code lang="graphql">{`
mutation {
  # 将没有电子邮件地址的所有用户的电子邮件更新为空字符串
  updateManyUsers(
    where: {
      email: null
    }
    data: {
      email: ""
    }
  )
}
`}</Code>

#### 向数据模型添加必填字段

向必须包含节点的模型添加必填字段时，会收到以下错误消息:"You are creating a required field but there are already nodes present that would violate that constraint.你正在创建必填字段，但已存在违反该约束的节点。"

这是因为所有现有节点都会收到该字段的"null"值。这将违反该字段的约束_必填字段_(或_non-nullable_)。

以下是添加必填字段所需的步骤:

- 把它变为可选字段

- 使用`updateManyXXX`将所有节点的字段从`null`迁移到非null值

- 现在你可以将该字段标记为_必填字段_并按预期进行部署


### 关系

_relation_定义两个[类型](#对象类型)之间连接的语义。关系中的两种类型通过[关系字段](#标量和关系字段)连接。当关系不明确时，需要使用[`@relation`](#关系字段)指令对关系字段进行注释以消除歧义。

以下是简单双向关系的示例:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  articles: [Article!]!
}
type Article {
  id: ID! @unique
  author: User!
}
`}</Code>

关系也可以将类型与自身连接起来。 然后将其称为_self-relation_:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  friends: [User!]!
}
`}</Code>

自我关系也可以是双向的:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  following: [User!]! @relation(name: "Following")
  followers: [User!]! @relation(name: "Followers")
}
`}</Code>

请注意，在这种情况下，关系需要使用[`@relation`指令](#relation-directive)进行注释。

#### 必需的关系

对于_单向_关系字段，你可以配置它是_必填字段_还是_可选的_。 `!`类型修饰符在GraphQL中充当契约，该字段永远不能为"null"。 因此，用户地址的字段将是"Address"或"Address!"类型。

包含所需_单向_关系字段的类型的节点只能使用[嵌套Mutation]创建，以确保相应字段不为"null"。

再来看以下关系:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  car: Car!
}
type Car {
  id: ID! @unique
  owner: User!
  color: String!
}
`}</Code>

如果没有"用户"，就永远不能创建"Car"，反之亦然，因为这会违反所需的约束。 因此，你需要使用嵌套Mutation同时创建两者:


<Code lang="graphql">{`
mutation {
  createUser(data: {
    car: {
      create: {
        color: "Yellow"
      }
    }
  }) {
    id
    car {
      id
    }
  }
}
`}</Code>

再次提醒，_一对多_关系字段始终设置为required。例如，包含许多用户地址的字段总是使用类型`[Address!]!`并且永远不能是`[Address!]`，`[Address]!`或`[Address]`。

#### `@relation`指令

在定义类型之间的关系时，_可以_使用`@relation`指令，该指令提供关于关系的元信息。如果关系不明确，那么你必须使用`@relation`指令来消除它的歧义。

它可以有两个参数:

- `name`(必需):此关系的标识符，以字符串形式提供。
- `onDelete`:指定_删除行为deletion behaviour_并启用_级联删除cascading deletes_。在具有相关节点的节点被删除的情况下，删除行为确定相关节点应该发生什么。此参数的输入值定义为具有以下可能值的枚举:
   - `SET_NULL`(默认值):将相关节点设置为"null"。
   - `CASCADE`:删除相关节点。请注意，无法将双向关系的_两_端都设置为"CASCADE"。

以下是使用`@relation`指令的数据模型示例:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  stories: [Story!]! @relation(name: "StoriesByUser" onDelete: CASCADE)
}
type Story {
  id: ID! @unique
  text: String!
  author: User @relation(name: "StoriesByUser")
}
`}</Code>

该关系被命名为"StoriesByUser"，删除行为如下:

- 删除"User"节点时，其所有相关的"Story"节点也将被删除。
- 当一个`Story`节点被删除时，它将被简单地从相关的`User`节点上的`stories`列表中删除。

##### 省略`@relation`指令

在最简单的情况下，两个类型之间的关系是明确的并且应该应用默认删除行为(`SET_NULL`)，相应的关系字段不必用`@relation`指令注释。

这里我们定义了`User`和`Story`类型之间的双向_one-to-many_关系。 由于尚未提供`onDelete`，因此使用默认删除行为:`SET_NULL`:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  stories: [Story!]!
}
type Story {
  id: ID! @unique
  text: String!
  author: User
}
`}</Code>

此示例中的删除行为如下:

- 当'User`节点被删除时，其所有相关`Story`节点上的`author`字段将被设置为`null`。 请注意，如果`author`字段被标记为[必填](#必填)，则操作将导致错误。
- 当一个`Story`节点被删除时，它将被简单地从相关的`User`节点上的`stories`列表中删除。

##### 使用`@relation`指令的`name`参数

在某些情况下，你的数据模型可能包含不明确的关系。 例如，考虑到你不仅想要一个关系来表达"用户"和"故事"之间的"作者关系"，而且你还想要一个关系来表达"故事"节点已经被"用户"_点赞_。

在这种情况下，你最终会得到"用户"和"故事"之间的两种不同关系! 为了消除它们的歧义，你需要为该关系指定一个名称:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  writtenStories: [Story!]! @relation(name: "WrittenStories")
  likedStories: [Story!]! @relation(name: "LikedStories")
}
type Story {
  id: ID! @unique
  text: String!
  author: User! @relation(name: "WrittenStories")
  likedBy: [User!]! @relation(name: "LikedStories")
}
`}</Code>

如果在这种情况下没有提供`name`，则无法确定`writtenStories`是否应该与`author`或`likesBy`字段相关。

##### 使用`@relation`指令的`onDelete`参数

如上所述，你可以为相关节点指定专用删除行为。 这就是`@relation`指令的`onDelete`参数。

我们看下面的示例:

<Code lang="graphql">{`
type User {
  id: ID! @unique
  comments: [Comment!]! @relation(name: "CommentAuthor", onDelete: CASCADE)
  blog: Blog @relation(name: "BlogOwner", onDelete: CASCADE)
}
type Blog {
  id: ID! @unique
  comments: [Comment!]! @relation(name: "Comments", onDelete: CASCADE)
  owner: User! @relation(name: "BlogOwner", onDelete: SET_NULL)
}
type Comment {
  id: ID! @unique
  blog: Blog! @relation(name: "Comments", onDelete: SET_NULL)
  author: User @relation(name: "CommentAuthor", onDelete: SET_NULL)
}
`}</Code>

让我们研究三种类型的删除行为:

- 当'User`节点被删除时，
   - 将删除所有相关的`Comment`节点。
   - 相关的`Blog`节点将被删除。
- 当`Blog`节点被删除时
   - 将删除所有相关的`Comment`节点。
   - 相关的`User`节点将其`blog`字段设置为`null`。
- 删除"Comment"节点时
   - 相关的`Blog`节点继续存在，删除的`Comment`节点从其`comments`列表中删除。
   - 相关的`User`节点继续存在，删除的`Comment`节点从其`comments`列表中删除。

#### 生成关系的API操作

schema中包含的关系会影响[Prisma API](#use-prisma-api)中的可用操作。以下是Prisma API中每个关系生成的CRUD和实时操作的概述:

- [关系Query]允许你跨类型查询数据或为关系聚合(请注意，这也可以使用[Relay](https://facebook.github.io/relay/)的[连接模型]。
- [嵌套Mutation]允许你在同一Mutation中创建，连接，更新，升级和删除多个相关节点。
- [关系Subscriptions]允许你获得关系更改的通知。

###  GraphQL指令

指令用于在你的数据模型中提供其他信息。它们看起来像这样:`@name(argument:"value")`或者当没有参数时只有`@name`。

####  Datamodel指令

Datamodel指令描述了有关GraphQL schema中的类型或字段的其他信息。

##### 唯一标量字段

`@unique`指令将标量字段标记为[唯一](#唯一)。唯一字段将在底层数据库中应用唯一的_index_。

<Code lang="graphql">{`
# \`User\` 有唯一的 \`email\` 
type User {
  email: String @unique
}
`}</Code>

查找有关`@unique`[指令](#唯一)的更多信息。

##### 关系字段

指令`@relation(name:String，onDelete:ON_DELETE!= SET_NULL)`可以附加到关系字段。

##### 标量字段的默认值

指令`@default(value:String!)`为标量字段设置[默认值](#默认值)。 请注意，`value`参数对于所有标量字段都是String类型(即使字段本身不是字符串):

<Code lang="graphql">{`
# \`title\`, \`published\`,\`someNumber\` 默认值为 \`New Post\`, \`false\` , \`42\`
type Post {
  title: String! @default(value: "New Post")
  published: Boolean! @default(value: "false")
  someNumber: Int! @default(value: "42")
}
`}</Code>

#### 临时指令

临时指令用于执行一次性迁移操作。 在部署包含临时指令的服务之后，**需要从类型定义文件**中手动删除临时指令。

##### 重命名类型或字段

临时指令`@rename(oldName:String!)`用于重命名类型或字段。

<Code lang="graphql">{`
# 重命名 \`Post\` 为 \`Story\`, 并且它的 \`text\` 字段改为 \`content\`
type Story @rename(oldName: "Post") {
  content: String @rename(oldName: "text")
}
`}</Code>

> 如果未使用重命名指令，Prisma会在创建新类型和字段之前删除旧类型和字段，从而导致数据丢失!

### 命名约定

你在Prisma service中遇到的不同对象(如类型或关系)遵循不同的命名约定，以帮助你区分它们。

#### 类型

类型名称确定派生查询和Mutation的名称以及嵌套Mutation的参数名称。

以下是命名类型的约定:

- 在 **单个数据**时选择类型名称:
  - **Yes**: `type User { ... }`
  - **No**: `type Users { ... }`

请严格遵守，因为当创建时若为`type Users`，那么自动生成的代码里查询多个用户会成为`Userss`

#### 标量和关系字段

标量字段的名称用于查询和Mutation的查询参数中。关系字段的名称遵循相同的约定，并确定关系Mutation的参数名称。关联字段名称只能包含 **字母数字字符**，并且需要以大写字母开头。它们可以包含 **最多64个字符**。

字段名称每种类型都是唯一的。

以下是命名字段的约定:

- 为列表字段选择复数名称:
  - **Yes**: `friends: [User!]!`
  - **No**: `friendList: [User!]!`
- 为非列表字段选择单数名称:
  - **Yes**: `post: Post!`
  - **No**: `posts: Post!`

### 更多SDL功能

在本节中，我们将介绍使用Prisma进行数据建模尚不支持的SDL功能。

#### 接口

"与许多类型系统一样，GraphQL支持接口。接口是一种抽象类型，包含一组必须包含的字段才能实现接口。"来自官方[GraphQL文档](http://graphql.org/learn/schema/#interfaces)

要了解有关接口何时以及如何进入Prisma的更多信息，请查看此[功能请求](https://github.com/prisma/prisma/issues/83)。

#### 联合类型

"联合类型与接口非常相似，但它们不能指定类型之间的任何公共字段。"来自官方[GraphQL文档](http://graphql.org/learn/schema/#union-types)

要了解有关联合类型何时以及如何进入Prisma的更多信息，请查看此[功能请求](https://github.com/prisma/prisma/issues/165)。



### datamodel合并概述

将Prisma连接到已具有数据库表/或包含某些数据的现有数据库时，从头开始手动编写数据模型同时确保它与现有数据的结构相匹配可能会非常繁琐。

要自动执行此过程，你可以使用Prisma CLI中的[`prisma introspect`]命令，根据现有数据的实际结构生成[datamodel] 。

生成的SDL可作为Prisma service的基础，但你可以根据需要轻松进行修改。一些常见的修改包括从GraphQL API隐藏表或将列赋予其他名称。

目前，数据库内省 **仅适用于Postgres**。此外，还有一组记录在案的[已知限制](https://github.com/prisma/prisma/issues/2377)。


### Introspecting Postgres数据库

Postgres使用以下模型在内部组织数据库:

![](https://i.imgur.com/0YJBgbW.png)

**重要**:当Introspecting Postgres数据库时，你实际上是根据图示的模型Introspecting _schema_而不是_database_!

有两种方法可以使用CLI来Introspecting Postgres:

- 使用交互式`prisma init`向导
- 使用专用的`prisma introspect`命令

在这两种情况下，你都需要为正在运行的Postgres数据库提供_连接配置_。这包括以下内容:

- **Host**:Postgres数据库的主机，例如`localhost`。
- **Port**:Postgres数据库监听的端口，例如`5432`。
- **User & Password**:Postgres数据库的用户名和密码。
- **Name of existing _database_ **:Postgres _database_的名称(根据上面所示的模型)。
- **Use SSL (Yes/No)**:如果数据库连接使用SSL，则需要选择"是"，否则选择"否"。
- **Name of existing _schema_ **:Postgres _schema_的名称(根据上面所示的模型)，例如: `public`。

#### 使用`prisma init`向导

在交互式`prisma init`流程中，你可以选择使用数据连接到现有数据库。 CLI将询问数据库连接详细信息(如上所述)并验证它是否可以建立成功的连接。

如果连接详细信息有效，CLI将introspect数据库并显示摘要。

![](https://i.imgur.com/cNIeeJf.png)

当`prisma init`终止时，CLI已为你创建了以下文件，你现在可以使用这些文件_deploy_一个新的Prisma service:

- `datamodel.prisma`:包含基于现有数据库生成的数据模型(在SDL中)。
- `docker-compose.yml`:包含Prisma service器配置的Docker Compose文件，包括有关如何连接数据库的详细信息
- `prisma.yml`:服务的根配置文件

为了能够使用GraphQL查询Postgres数据库，你现在需要_deploy_服务并打开GraphQL Playground:

<Code>
prisma deploy
prisma playground
`}</Code>

#### 使用`prisma introspect`

`prisma introspect`的工作方式与`prisma init`向导类似，因为你需要提供数据库连接信息。

`prisma init`向导生成一个完整的_service配置_，`prisma introspect`只生成datamodel文件:

- `datamodel-[TIMESTAMP].graghpql`:时间戳组件允许你在不覆盖现有数据模型的情况下对现有Prisma service使用introspect命令。

在使用生成的数据模型部署服务之前，应确保Docker Compose文件中指定Prisma service器配置的`migrations`属性(PRISMA_CONFIG`环境变量)设置为"false":

<Code lang="yaml">{`
PRISMA_CONFIG: |
  port: 4466
  databases:
    default:
      connector: postgres
      migrations: false # 确保这里为 false
      host: localhost
      port: 5432
      user: postgres
      password: postgres
      database: postgres
      schema: public
`}</Code>

将`migrations`设置为`false`可确保Prisma仅基于数据模型更新服务器的GraphQL API，但它不会执行基础Postgres数据库的合并和初始化。

### 生成的数据模型中的关系

根据你在SQL数据库中对表之间的关系建模的方法，生成的数据模型中的关系可能看起来不同。 以下是Prisma如何解释SQL中指定的关系的概述:

| SQL中的关系| 由Prisma(SDL)生成的关系|
| --- | --- |
| 内联关系列 | 一对多 |
| 关系表 | 多对多 |
| 带有额外列的关系表 | 用于表达关系的专用类型 |

#### 内联关系列

表示SQL数据库中关系的常用方法是通过_foreign key_约束:

<Code lang="sql">{`
CREATE TABLE product (
  id           serial PRIMARY KEY UNIQUE
, description  text NOT NULL
);
CREATE TABLE bill (
  id         serial PRIMARY KEY UNIQUE
, notes      text NOT NULL
, product_id int REFERENCES product (id) ON UPDATE CASCADE
);
`}</Code>

在这种情况下，`bill`使用外键来引用`product`表的`id`，从而在两个表之间创建一个_relation_。 基于此表结构，Prisma生成两个SDL模型，`Product`和`Bill`，具有_双向_关系(通过`product`和`bills`字段):

<Code lang="graphql">{`
type Product @pgTable(name: "product") {
  description: String!
  id: Int! @unique
  bills: [Bill!]!
}
type Bill @pgTable(name: "bill") {
  notes: String!
  id: Int! @unique
  product: Product @pgRelation(column: "product_id")
}
`}</Code>

以下是Prisma如何为生成的字段生成名称:

- `type Product`
   - `description:String`以`product`表中的`description`列命名
   - `id:Int!`以`product`表的`id`列命名
   - `bills:[Bill!]!`以`bill`表的_复数_版本命名
- `type Bill`
   - `notes:String`以`bill`表上的`notes`列命名
   - `id:Int!`以`bill`表上的`id`列命名
   - `product:Product`以`bill`表上的`product_id`列命名; Prisma剥离了这些外键字段的后缀:`_ id`，`ID`和`Id`

#### 关系表

另一种在SQL数据库中表示关系的常用方法是通过专用的_relation table_来"连接"两个相关的表:

<Code lang="sql">{`
CREATE TABLE product (
  id         serial PRIMARY KEY UNIQUE
, product    text NOT NULL
);
CREATE TABLE bill (
  id       serial PRIMARY KEY UNIQUE
, bill     text NOT NULL
);
CREATE TABLE bill_product (
  bill_id    int REFERENCES bill (id) ON UPDATE CASCADE ON DELETE CASCADE
, product_id int REFERENCES product (id) ON UPDATE CASCADE
);
`}</Code>

在这种情况下，关系表称为`bill_product`，简单地......只包含两列，它们都是`bill`和`product`表的`id`列的外键。

#### 与额外列的关系

有时，使用关于关系本身的元信息来丰富关系表是有帮助的:

<Code lang="sql">{`
CREATE TABLE product (
  id         serial PRIMARY KEY UNIQUE
, product    text NOT NULL
);
CREATE TABLE bill (
  id       serial PRIMARY KEY UNIQUE
, bill     text NOT NULL
);
CREATE TABLE bill_product (
  bill_id    int REFERENCES bill (id) ON UPDATE CASCADE ON DELETE CASCADE
, product_id int REFERENCES product (id) ON UPDATE CASCADE
, some_other_column text NOT NULL
);
`}</Code>

如果关系表包含此类额外信息，则Prisma会将关系表视为_dedicated type_:

<Code lang="graphql">{`
type Bill @pgTable(name: "bill") {
  bill: String!
  id: Int! @unique
  bill_products: [Bill_product]
}
type Bill_product @pgTable(name: "bill_product") {
  bill: Bill @pgRelation(column: "bill_id")
  product: Product @pgRelation(column: "product_id")
  some_other_column: String!
}
type Product @pgTable(name: "product") {
  id: Int! @unique
  product: String!
  bill_products: [Bill_product]
}
`}</Code>

这样，你可以充分灵活地使用常规查询和嵌套Mutation来设置和读取额外的列。


### 数据库迁移概述

如果将[Prisma service]配置为允许数据库迁移，则可以使用SDL定义和迁移数据库。

Prisma使用 **临时指令**来执行一次性迁移操作。 在部署包含临时指令的服务之后，**需要从类型定义文件**中手动删除临时指令。

### 重命名

临时指令`@rename(oldName:String!)`用于重命名类型和字段。

**如果未使用`@rename`指令，Prisma会在创建新类型和字段之前删除旧类型和字段，从而导致数据丢失!**

#### 重命名类型

**将`Post`类型重命名为`Story`**

<Code lang="graphql">{`
type Story @rename(oldName: "Post") {
  content: String
}
`}</Code>

在执行`prisma deploy`并重命名后，需要手动删除`@rename(oldName:"Post")`指令。

#### 重命名字段

**将`text`字段重命名为`content`**

<Code lang="graphql">{`
type Story {
  content: String @rename(oldName: "text")
}
`}</Code>

在执行`prisma deploy`并重命名后，需要手动删除`@rename(oldName:"text")`指令。



下一节是Prisma的神奇操作，如何从数据库拿到数据。

<InternalLink href="/docs/part3" as="/docs/part3">Prisma client</InternalLink>
